tilføjelse af links til footer

--- a/index.html
+++ b/index.html
@@ -187,28 +187,59 @@
 
     </main>
 
-    <section class="nyhedsbrev"></section>
+    <section class="nyhedsbrev">
+
+        <h2>Tilmeld dig vores nyhedsbrev og få 10% rabat på dit første køb</h2>
+        <p>Vær den første til at modtage tilbud, nyheder og tips til hud- og hårpleje</p>
+
+        <label for="nyhedsbrev-email" class="visually-hidden">Din email</label>
+        <input type="email" id="nyhedsbrev-email" autocomplete="email" placeholder="Din email">
+        <input type="submit" class="nyhedsbrev-submit" value="Tilmeld">
+
+    </section>
 
     <footer>
 
         <section class="footer-kontakt">
-            <p>Kontakt</p>
-            <ul></ul>
+            <h3>Kontakt</h3>
+            <ul>
+                <li>Kystnær</li>
+                <li><address aria-label="email"><a href="mailto:kontakt@kystnaer.com">kontakt@kystnaer.com</a></address></li>
+                <li><address aria-label="adresse">Ørbyhage 96</address></li>
+                <li><address>6100 Haderslev</address></li>
+                <li>Tlf.: <address aria-label="telefon">+45 71 72 31 91</address></li>
+            </ul>
         </section>
 
         <section class="footer-om">
-            <p>Om Kystnær</p>
-            <ul></ul>
+            <h3>Om Kystnær</h3>
+            <ul>
+                <li><a href="https://kystnaer.com/pages/om-kystnaer">Hvem er vi?</a></li>
+                <li><a href="https://kystnaer.com/pages/forhandlere">Find forhandlere</a></li>
+                <li><a href="https://kystnr.turis.app/forms/kystnaer">Bliv forhandler</a></li>
+                <li><a href="https://kystnr.turis.app/sign-in">B2B Login</a></li>
+                <li><a href="https://kystnaer.com/pages/contact">Kontakt os</a></li>
+            </ul>
         </section>
 
         <section class="footer-info">
-            <p>Information</p>
-            <ul></ul>
+            <h3>Information</h3>
+            <ul>
+                <li><a href="https://kystnaer.com/policies/refund-policy">Returpolitik</a></li>
+                <li><a href="https://kystnaer.com/policies/shipping-policy">Levering- og handelsbetingelser</a></li>
+                <li><a href="https://kystnaer.com/policies/privacy-policy">Persondatapolitik</a></li>
+                <li><a href="https://kystnaer.com/pages/lag">LAG og kommisionen</a></li>
+            </ul>
         </section>
 
         <section class="footer-some">
-            <p>Følg med</p>
-            <ul></ul>
+            <h3>Følg med</h3>
+            <ul>
+                <li><a href="https://www.facebook.com/kystnaer"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/kystnaer"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://dk.pinterest.com/kystnaer/"><i class="fa-brands fa-pinterest-p"></i></a></li>
+                <li><a href="https://www.tiktok.com/@kystnaer"><i class="fa-brands fa-tiktok"></i></a></li>
+            </ul>
         </section>
 
     </footer>
