tilføjelse af sketion med alle produkter vist i grid

--- a/index.html
+++ b/index.html
@@ -185,6 +185,84 @@
 
         </section>
 
+        <section class="all-grid">
+
+            <h2>Alle produkter til mænd</h2>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Barberingspakken</p></a>
+                <p class="pris-grid">299,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>"Gå glad i bad"-pakken</p></a>
+                <p class="pris-grid">199,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Duftprøvepakken</p></a>
+                <p class="pris-grid">79,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Barberingskost</p></a>
+                <p class="pris-grid">99,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Shavingbar</p></a>
+                <p class="pris-grid">160,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Bambusskraber</p></a>
+                <p class="pris-grid">59,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Sæbebar - tang</p></a>
+                <p class="pris-grid">75,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Sæbebar - neutral</p></a>
+                <p class="pris-grid">75,-</p>
+            </div>
+            
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Sæbebar - aktivt kul</p></a>
+                <p class="pris-grid">75,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Shampoobar - tang</p></a>
+                <p class="pris-grid">140,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Shampoobar - neutral</p></a>
+                <p class="pris-grid">140,-</p>
+            </div>
+
+            <div class="gridprodukt">
+                <a href="#"><img src="#" alt="#" class="gridbillede"></a>
+                <a href="#" class="produktnavn-grid"><p>Shampoobar - aktivt kul</p></a>
+                <p class="pris-grid">140,-</p>
+            </div>
+
+        </section>
+
     </main>
 
     <section class="nyhedsbrev">
