tilføjelse af "til toppen"-knap

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <header>
+    <header id="top">
 
 
         <button id="bars">
@@ -368,6 +368,10 @@
 
 
     </section>
+
+    <div class="til-toppen">
+        <a href="#top"><i class="fa-solid fa-chevron-up"></i></a>
+    </div>
 
 
     <footer>
